--- a/academics_admissions/admission_eligibility.html
+++ b/academics_admissions/admission_eligibility.html
@@ -154,9 +154,14 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
@@ -206,8 +211,8 @@
                     </p>
                     </div>
                     <div class="right-body">
-                        <h4 style="text-align:center">Admissions 2022-23 <br> For more details kindly check <a href="http://www.punjabteched.com" target="_blank">www.punjabteched.com</a></h4>
-                        <img src="../assets/images/admission_22_23.png" alt="" srcset="">
+                        <h4 style="text-align:center">Admissions 2023-24 <br> For more details kindly check <a href="http://www.punjabteched.com" target="_blank">www.punjabteched.com</a></h4>
+                        <!--<img src="../assets/images/admission_22_23.png" alt="" srcset="">-->
                     </div>
                      
             
