--- a/academics_admissions/antiragging.html
+++ b/academics_admissions/antiragging.html
@@ -154,9 +154,14 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
@@ -332,22 +337,22 @@
                                         <a href="mailto:bhullarmanjitsingh@gmail.com" target="_blank">bhullarmanjitsingh@gmail.com</a>
                                     </td>
                                   </tr>
-                              <tr><td>7</td><td>Pankaj Garg</td><td>Student<br>220/19 <br>AA (5th Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>8</td><td>Sukhmeet Singh</td><td>Student<br>626/19 <br>ME (5th Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>9</td><td>Prakash</td><td>Student<br>20/19 <br>ECE (5th Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>10</td><td>Jishu Bansal</td><td>Student<br>716/19 <br>IT (5th Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>11</td><td>Himanshu</td><td>Student<br>927/19 <br>EE (5th Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>12</td><td>Rajan Sharma</td><td>Student<br>546/20 <br>CSE (3rd Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>13</td><td>Harmanjeet Singh</td><td>Student<br>620/20<br>ME (3rd Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>14</td><td>Sandeep Garg</td><td>Student<br>723/20 <br>IT (3rd Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>15</td><td>Pardeep Singh</td><td>Student<br>947/20 <br>EE (3rd Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>16</td><td>Abhishek Mittal</td><td>Student<br>301/20 <br>D.Pharmacy (2nd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>17</td><td>Gurinder Singh</td><td>Student<br>707/21 <br>IT (1st Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>18</td><td>Bhavndeep Singh</td><td>Student<br>511/21 <br>CSE (1st Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>19</td><td>Arshpreet Singh</td><td>Student<br>812/21 <br>Civil Engg. (1st Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>20</td><td>Parmdev</td><td>Student<br>316/21 <br>D.Pharmacy (1st Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>21</td><td>Komalpreet Singh</td><td>Student<br>626/21 <br>ME (1st Sem)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>22</td><td>Prabhnoor Singh Gill</td><td>Student<br>940/21 <br>EE (1st Sem)</td><td>Member</td><td>---</td></tr>
+                              
+                              <tr><td>7</td><td>Rajan Sharma</td><td>Student<br>546/20 <br>CSE (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>8</td><td>Harmanjeet Singh</td><td>Student<br>620/20<br>ME (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>9</td><td>Sandeep Garg</td><td>Student<br>723/20 <br>IT (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>10</td><td>Lavesh Kumar</td><td>Student<br>941/20 <br>EE (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>11</td><td>Gaurav</td><td>Student<br>817/20 <br>Civil (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>12</td><td>Gurinder Singh</td><td>Student<br>707/21 <br>IT (2nd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>13</td><td>Bhavndeep Singh</td><td>Student<br>511/21 <br>CSE (2nd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>14</td><td>Parmdev</td><td>Student<br>316/21 <br>D.Pharmacy (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>15</td><td>Komalpreet Singh</td><td>Student<br>626/21 <br>ME (2nd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>16</td><td>Prabhnoor Singh Gill</td><td>Student<br>940/21 <br>EE (2nd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>17</td><td>Pankaj Kumar</td><td>Student<br>19/22 <br>ECE (1st Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>18</td><td>Himanshu</td><td>Student<br>622/22 <br>ME (1st Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>19</td><td>Dalvir Mehta</td><td>Student<br>911/22 <br>EE (1st Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>20</td><td>Yishu Jajoria</td><td>Student<br>731/21 <br>IT (1st Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>21</td><td>Dakshveer Singh</td><td>Student<br>311/21 <br>D.Pharmacy (1st Year))</td><td>Member</td><td>---</td></tr>
 
                             </tbody>
                           </table>
