--- a/academics_admissions/programmes.html
+++ b/academics_admissions/programmes.html
@@ -154,9 +154,14 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
@@ -267,13 +272,13 @@
                             <th scope="row">9</th>
                             <td>D.Pharmacy</td>
                             <td>2 years</td>
-                            <td>30</td>
+                            <td>60</td>
                             <td>--</td>
                           </tr>
                         </tbody>
                       </table>
                      </div>
-                      <span style="color: #6f0000; font-weight: bold;">Duration for Lateral Entry for all Diploma Level Engineering Courses shall be of 2 Years </span><br><br>
+                      <span style="color: #6f0000; font-weight: bold;">Seats listed are as per the sanctioned intake approved for session 2022-23 by AICTE, CoA and PCI. <br/>Duration for Lateral Entry for all Diploma Level Engineering Courses shall be of 2 Years </span><br><br>
                       
 
                         
