--- a/departments/ce/contact.html
+++ b/departments/ce/contact.html
@@ -155,12 +155,13 @@
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
                         <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
-                          <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                          <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                          <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
-                          <li><a href="../../help_desk/icc.html">Internal Complaint Committee</a></li>
-                          <li><a href="../../help_desk/scst.html">Anti-discrimination cell</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
@@ -223,17 +224,17 @@
                            </p>
         
                        </div>
-                       <!--<div class="contact-info">
+                       <div class="contact-info">
                         <p>
-                            <h5>Er. Sarabjeet Kaur </h5> <br>
-                            Head of Department
+                            <h5>Er. Manwinder Singh </h5> <br>
+                            Sr. Lect.
                             <br/>
-                            Mob: 95011-08710
+                            Mob: 98774-69364
                             <br/>
-                           Email: <a href="mailto:sarabjit.kaur73@punjab.gov.in">sarabjit.kaur73@punjab.gov.in</a>
+                           Email: <a href="mailto:manwinder.singh1968@punjab.gov.in">manwinder.singh1968@punjab.gov.in</a>
                            </p>
         
-                       </div>-->
+                       </div>
                        <div class="contact-info">
                         <p>
                             <h5>Er. Punit Gupta </h5> <br>
