--- a/aboutus/organization.html
+++ b/aboutus/organization.html
@@ -157,9 +157,14 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
