Updating Departments, Campus Placement

--- a/departments/ce/home.html
+++ b/departments/ce/home.html
@@ -210,12 +210,17 @@
                 <div class="down-content">
                     <h4>About Program</h4>
                     <p style="text-align: justify;">
-                        
+                      The Department of Civil Engineering started offering Diploma programme in Civil Engineering in the year 2007 with an intake of 30, which was increased to 60 in the year 2017.A team of qualified faculty with ample experience is the highlight of the Department.The Diploma program in Civil Engineering envisages to provide students with a good understanding of Civil Engineering solutions in a global, societal and environmental context, consistent with the principles of sustainable development. The course will make the students capable in identifying, formulating and solving civil engineering problems that meet specified performance, cost, time, safety and other quality needs and objectives with professional and ethical responsibility.
                       </p>
                       <!-- Head's Message -->
                       <h4 class="block-dept">HoD's Message</h4>
                       <div class="hod-message">
-                        <p>The Department of Civil Engineering started offering Diploma programme in Civil Engineering in the year 2007 with an intake of 30, which was increased to 60 in the year 2017.A team of qualified faculty with ample experience is the highlight of the Department.The Diploma program in Civil Engineering envisages to provide students with a good understanding of Civil Engineering solutions in a global, societal and environmental context, consistent with the principles of sustainable development. The course will make the students capable in identifying, formulating and solving civil engineering problems that meet specified performance, cost, time, safety and other quality needs and objectives with professional and ethical responsibility.
+                        <p>
+                          Civil engineers design, build and maintain the bedrock for our modern society – our buildings, roads, bridges, drinking water, manufacturing units, and energy systems. The young engineering aspirants, who wish to make their career in civil engineering, are welcome at the department of Civil Engineering at Govt. Polytechnic College, Bathinda.<br/>
+
+We continuously strive to make students aware of the latest technological developments by imparting quality education and organizing various departmental activities such as industry visits, guest lectures, skill development training, etc., for students' holistic development as professional engineers. The program's framework provides ample opportunities for the students to train themselves as researcher, thinker, job-seekers, entrepreneurs, or innovators based on their passion. Highly successful alumni are our certificate of excellence.<br/>
+
+As always, we aim to lead, inspire, and — most importantly — learn together as a community. And I look forward to sharing our results with you all in the years to come.
                         </p>
                        <div>
                         <img src="../../assets/images/faculty/rani_devi.jpeg" alt="photo" srcset="">
