--- a/departments/ece/home.html
+++ b/departments/ece/home.html
@@ -210,14 +210,14 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      Electronics and Communication Engineering is about electronic components, integrated circuits and microprocessors and consists of design, fabricate, test, maintain and supervise the manufacture of electronic equipment. 
+                      Electronics and Communication Engineering is about electronic components, integrated circuits and microprocessors and consists of design, fabricate, test, maintain and supervise the manufacture of electronic equipment. Electronics and Communication engineers find wide range of employment opportunities in Govt , Public and Private sectors like BSNL,  NTPC, PSPCL, Airtel , Jio. The Department has Well qualified and experienced faculty, Well equipped laboratories, Training and placement support and MoU's with leading industries.
                       </p>
                       <!-- Head's Message -->
                       <h4 class="block-dept">HoD's Message</h4>
                       <div class="hod-message">
-                        <p>  This branch of Engineering has a key place in the field of computers, Information Technology, Electrical, power system operations, communication systems etc.
+                        <p>   The department  is committed to preparing professional Electronics Engineers in a learner-centered academic and professional environment, with the necessary knowledge, skills and attitudes, who will serve the  Industry. This is accomplished by a team of dedicated faculty and professional staff who are committed to providing the best support possible to students.<br/>The institute has well equipped laboratories furnished with machines / equipments as per the requirements of AICTE . Besides equipping students in professional competence, institute gives paramount importance to all round development to student's personality by providing those ample opportunities for participation in games and sports, cultural and other societal activities. Emphasis is also given on development of communication and professional skills, inter-personal skills, organizational ability etc.
                         </p>
-                       <div>
+                       <div style="width:500px">
                         <img src="../../assets/images/faculty/manjit_singh.jpg" alt="photo" srcset="">
                         <figcaption>Er. Manjeet Singh Bhullar<br/> HOD ECE</figcaption>
                        </div>
@@ -231,7 +231,7 @@
                         <!-- Mission -->
                         <h4 class="block-dept">Mission</h4>
                       <p style="text-align: justify;">
-                        <img src="../../assets/images/arrows_sign.png" alt="" class="arrow-symbol" srcset="">To infuse a motivational spirit in students for innovative designs , creations and entrepreneurship.To undertake projects which offer opportunities for long term interaction with academia and Industry.</p>
+                        <img src="../../assets/images/arrows_sign.png" alt="" class="arrow-symbol" srcset="">To Provide Quality Education in the field of Electronics and Communication Engg. for catering the needs of Industry and to make them Entrepreneur and employable</p>
 
                         <!-- Details -->
                         <div class="details-dept">
