--- a/departments/ece/laboratories.html
+++ b/departments/ece/laboratories.html
@@ -210,7 +210,7 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      Electronics and Communication Engineering is about electronic components, integrated circuits and microprocessors and consists of design, fabricate, test, maintain and supervise the manufacture of electronic equipment. This branch Of Engineering has a key place in the field of computers, Information Technology, Electrical, power system operations, communication systems etc.
+                      Electronics and Communication Engineering is about electronic components, integrated circuits and microprocessors and consists of design, fabricate, test, maintain and supervise the manufacture of electronic equipment. Electronics and Communication engineers find wide range of employment opportunities in Govt , Public and Private sectors like BSNL,  NTPC, PSPCL, Airtel , Jio. The Department has Well qualified and experienced faculty, Well equipped laboratories, Training and placement support and MoU's with leading industries.
                       </p>
                      <h4 class="block-dept">Laboratories</h4>
                      <table class="table table-striped dept-content-table">
