--- a/departments/ee/laboratories.html
+++ b/departments/ee/laboratories.html
@@ -210,7 +210,8 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      The Electrical Engineering technocrats are required in almost every engineering organisation. The Electrical Engineering technocrats play an important role in electrical wiring, motor winding, generation, transmission and distribution of electrical power. Now a days there is huge demand of electrical engineers in the companies which are involved in infrastructure development.
+                      The department of electrical engg was started in 2007 with intake of 60 students in Diploma Program. The Electrical Department of this institute has Well qualified and experienced faculty, Well equipped laboratories, Training and placement support and MoU’s with star transformers, Mahashakti energy limited, pp industries, mr conductors etc.
+Electrical engineers find wide range of employment opportunities in govt as well as private sectors notable being NTPC, PSPCL, MUNICIPAL CORPORATIONS etc. if students wish to diversify they may opt for bachelor of technology
     
                       </p>
                      <h4 class="block-dept">Laboratories</h4>
