--- a/departments/it/laboratories.html
+++ b/departments/it/laboratories.html
@@ -211,7 +211,9 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      Information Technology is a very demanding course in present times, as all the work of the present generation is dependent on computers. Computer Science Engg department has various software & hardware labs with adequate infrastructure with wi-fi connectivity.
+                      Diploma in IT is a comprehensive program designed to provide students with a solid foundation in information technology. This course is ideal for individuals who wish to pursue a career in the IT industry or enhance their existing IT skills. The course covers various aspects of IT, such as computer programming, database management, network administration, web development, and software engineering. <br/>
+                      The duration of the course typically ranges from three years and two years for lateral entry. Students are trained to develop technical skills through hands-on learning and practical assignments. The course curriculum includes a mix of theoretical and practical modules to provide students with a well-rounded education.<br/>
+                      Upon completion of the Diploma in IT, students can pursue a variety of IT-related careers, such as web developers, network administrators, software engineers, database managers, and IT support technicians. The demand for IT professionals is growing rapidly, and this course can provide individuals with a competitive edge in the job market.
     
                       </p>
                      <h4 class="block-dept">Laboratories</h4>
