--- a/departments/ee/home.html
+++ b/departments/ee/home.html
@@ -210,12 +210,13 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      The Electrical Engineering technocrats are required in almost every engineering organisation. The Electrical Engineering technocrats play an important role in electrical wiring, motor winding, generation, transmission and distribution of electrical power. Now a days there is huge demand of electrical engineers in the companies which are involved in infrastructure development.
+                      The department of electrical engg was started in 2007 with intake of 60 students in Diploma Program. The Electrical Department of this institute has Well qualified and experienced faculty, Well equipped laboratories, Training and placement support and MoU’s with star transformers, Mahashakti energy limited, pp industries, mr conductors etc.
+Electrical engineers find wide range of employment opportunities in govt as well as private sectors notable being NTPC, PSPCL, MUNICIPAL CORPORATIONS etc. if students wish to diversify they may opt for bachelor of technology
                       </p>
                       <!-- Head's Message -->
                       <h4 class="block-dept">HoD's Message</h4>
                       <div class="hod-message">
-                        <p> The Electrical Engineering technocrats are required in almost every engineering organisation. The Electrical Engineering technocrats play an important role in electrical wiring, motor winding, generation, transmission and distribution of electrical power. Now a days there is huge demand of electrical engineers in the companies which are involved in infrastructure development.
+                        <p> On behalf of our students and faculty it is my privilege to welcome all of you to the department of electrical engineering at GPC Bathinda. We take pride in our faculty, a team of highly capable and dedicated professionals. On the whole, we are committed towards creating and erecting professional community which is vivacious and provides continuous learning.
                         </p>
                        <div>
                         <img src="../../assets/images/faculty/jasvir.jpg" alt="photo" srcset="">
@@ -231,7 +232,8 @@
                         <!-- Mission -->
                         <h4 class="block-dept">Mission</h4>
                       <p style="text-align: justify;">
-                        <img src="../../assets/images/arrows_sign.png" alt="" class="arrow-symbol" srcset="">To infuse a motivational spirit in students for innovative designs , creations and entrepreneurship.To undertake projects which offer opportunities for long term interaction with academia and Industry.</p>
+                        <img src="../../assets/images/arrows_sign.png" alt="" class="arrow-symbol" srcset=""> To prepare engineering students with deep understanding of fundamentals of Electrical Engineering<br/>
+                        <img src="../../assets/images/arrows_sign.png" alt="" class="arrow-symbol" srcset="">To infuse a motivational spirit in students for innovative designs , creations and entrepreneurship.</p>
 
                         <!-- Details -->
                         <div class="details-dept">
