Updating Production name

--- a/academics_admissions/admission_eligibility.html
+++ b/academics_admissions/admission_eligibility.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Mechanical Engineering (Production)</a></li>
                     <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../departments/workshop/home.html">Workshop</a></li>
@@ -200,9 +200,9 @@
                     <div class="left-body">
                         <h4 class="block-dept">Admission Eligibility for Diploma Courses</h4>
                      <p>Admission to the various streams of Engineering/Technology for three years diploma courses is made through centralized counselling conducted by Punjab State Board of Technical Education & Industrial Training, Chandigarh. <br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2022/Notifications-Diploma_2022.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Engineering Courses (3 Year Program- Semester System)</a><br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2022/Notifications-LEET_2022.pdf" target="_blank">→ Eligibility for Admission to Lateral Entry of Diploma Level Engineering Courses (Entry in 2nd Year of 3 Year Program- Semester System)</a><br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2022/Notifications-Pharmacy_2022.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Pharmacy Courses (2 Year Course- Annual System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-Diploma_2023.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Engineering Courses (3 Year Program- Semester System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-LEET_2023.pdf" target="_blank">→ Eligibility for Admission to Lateral Entry of Diploma Level Engineering Courses (Entry in 2nd Year of 3 Year Program- Semester System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-Pharmacy_2023.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Pharmacy Courses (2 Year Course- Annual System)</a><br><br>
 
                       <b>MEDICAL TEST</b>
                       <br/>
@@ -211,8 +211,8 @@
                     </p>
                     </div>
                     <div class="right-body">
-                        <h4 style="text-align:center">Admissions 2023-24 <br> For more details kindly check <a href="http://www.punjabteched.com" target="_blank">www.punjabteched.com</a></h4>
-                        <!--<img src="../assets/images/admission_22_23.png" alt="" srcset="">-->
+                        <!-- <h4 style="text-align:center">Admissions 2023-24 <br> For more details kindly check <a href="http://www.punjabteched.com" target="_blank">www.punjabteched.com</a></h4> -->
+                        <img src="../assets/images/admission_23_24.png" alt="" srcset="">
                     </div>
                      
             
