--- a/aboutus/organization.html
+++ b/aboutus/organization.html
@@ -104,16 +104,18 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Academics & Admission</a>
-                  <ul style="width:280px" class="sub-menu">
-                    <li><a href="../academics_admissions/programmes.html">Programmes of Study</a></li>
-                    <li><a href="../index.html#scholarships_offered">Scholarships</a></li>
-                    <li><a href="../academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
-                    <li><a href="../academics_admissions/antiragging.html">Anti Ragging</a></li>
-                    <li><a href="../academics_admissions/fee_structure.html">Fee Structure</a></li>
-                    <li><a href="../academics_admissions/academic_calendar.html">Academic Calendar</a></li>
-                    <li><a href="../academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
-                    <li><a href="../academics_admissions/psbte_results.html">PSBTE Results</a></li>
-                    <li><a href="../academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
+                  <ul style="width:420px" class="sub-menu">
+                    <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../departments/ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../departments/it/home.html">Information Technology</a></li>
+                    <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Mechanical Engineering (Production)</a></li>
+                    <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../departments/workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub">
