--- a/academics_admissions/programmes.html
+++ b/academics_admissions/programmes.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Mechanical Engineering (Production)</a></li>
                     <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../departments/workshop/home.html">Workshop</a></li>
@@ -263,7 +263,7 @@
                           </tr>
                           <tr>
                             <th scope="row">8</th>
-                            <td>Production & Industrial Engineering</td>
+                            <td>Mechanical Engineering (Production)</td>
                             <td>3 years</td>
                             <td>30</td>
                             <td>3</td>
@@ -278,7 +278,7 @@
                         </tbody>
                       </table>
                      </div>
-                      <span style="color: #6f0000; font-weight: bold;">Seats listed are as per the sanctioned intake approved for session 2022-23 by AICTE, CoA and PCI. <br/>Duration for Lateral Entry for all Diploma Level Engineering Courses shall be of 2 Years </span><br><br>
+                      <span style="color: #6f0000; font-weight: bold;">Seats listed are as per the sanctioned intake approved for session 2023-24 by AICTE, CoA and PCI. <br/>Duration for Lateral Entry for all Diploma Level Engineering Courses shall be of 2 Years </span><br><br>
                       
 
                         
