--- a/index.html
+++ b/index.html
@@ -222,8 +222,13 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/bid_add_rule_merge.pdf" target="_blank">
+                          Rent Contract of Canteen Cum TuckShop for Year 2023-24
+                       </a>
+                     </li>
+                      <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://eakadamik.in/psbte_2023/" target="_blank">
-                            Pre-Registration for Admissions 2023-24
+                            Admissions 2023-24
                           </a>
                         </li>
                       <li>
@@ -231,11 +236,11 @@ https://templatemo.com/tm-569-edu-meeting
                             Enquiry Proforma for Admissions 2023-24
                           </a>
                         </li>
-                    <li>
+                    <!-- <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/letter-APF-May2023.PDF" target="_blank">
                           Regarding End Semester Examination May 2023
                         </a>
-                      </li>
+                      </li> -->
                       <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/src_activity_even_sem_23.pdf" target="_blank">
                             SRC Activity News Letter Even Semester (2022-23)
@@ -256,9 +261,9 @@ https://templatemo.com/tm-569-edu-meeting
                           Direct Counseling (Engineering Courses)- Admissions 2022-23
                         </a>
                       </li>-->
-                      <li>
+                      <!-- <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Cal_Jan23.PDF" target="_blank">Academic Calendar (Even Semester) 2022-23</a>
-                      </li>
+                      </li> -->
                       
                       <!--<li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
