Production name change partially

--- a/departments/pie/home.html
+++ b/departments/pie/home.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../../departments/pie/home.html">Mechanical Engineering (Production)</a></li>
                     <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../../departments/workshop/home.html">Workshop</a></li>
@@ -186,7 +186,7 @@
         <div class="col-lg-12">
             
           <!-- <h6>Get all details</h6> -->
-          <h2><a href="home.html" class="dept-home-link">Department of Production & Industrial Engineering</a></h2>
+          <h2><a href="home.html" class="dept-home-link">Department of Mechanical Engineering (Production)</a></h2>
         </div>
       </div>
     </div>
@@ -210,12 +210,12 @@
                 <div class="down-content">
                     <h4>About Course</h4>
                     <p style="text-align: justify;">
-                      Diploma in Production and Industrial Engg. is a combination of manufacturing technology and engineering sciences with management science.A Production engineer typically has a wide knowlege of engineering practices and is aware of the management challenges related to production. Production and Industrial Engg. is a specialised area of Mechanical Engg. The objective of diploma is to enable engineers to improve efficiency and effectiveness of manufacturing and service sector industry. The curriculum includes basic Mechanical Engg. subjects. Some of them are Applied Mechanics, Strength of Materials, Thermodynamics, Machine Design etc.The central workshop has a seperate building which is fully equipped with machines range from conventional lathe to CNC machine. The dept. has dedicated Counseling and Placement Cell to guide/help students for higher study, opportunities abroad and to get job as per their choice. The key sectors where our Production engineers absorbed are Govt. Technical Education Dept. Swaraj, Hero, Godrej, Honda, Maruti, Trident,  Koyo Bearings and many more....                                               
+                      Diploma in Mechanical Engineering (Production) is a combination of manufacturing technology and engineering sciences with management science.A Mechanical Engineer (Production) typically has a wide knowlege of engineering practices and is aware of the management challenges related to production. Mechanical Engineering (Production) is a specialised area of Mechanical Engg. The objective of diploma is to enable engineers to improve efficiency and effectiveness of manufacturing and service sector industry. The curriculum includes basic Mechanical Engg. subjects. Some of them are Applied Mechanics, Strength of Materials, Thermodynamics, Machine Design etc.The central workshop has a seperate building which is fully equipped with machines range from conventional lathe to CNC machine. The dept. has dedicated Counseling and Placement Cell to guide/help students for higher study, opportunities abroad and to get job as per their choice. The key sectors where our Production engineers absorbed are Govt. Technical Education Dept. Swaraj, Hero, Godrej, Honda, Maruti, Trident,  Koyo Bearings and many more....                                               
                       </p>
                       <!-- Head's Message -->
                       <h4 class="block-dept">HoD's Message</h4>
                       <div class="hod-message">
-                        <p>I am delighted to welcome you all to the Diploma in Production and Industrial Engineering program at our college. This program is designed to equip students with the necessary knowledge and skills required to pursue a successful career in the field of production and industrial engineering.<br/>
+                        <p>I am delighted to welcome you all to the Diploma in Mechanical Engineering (Production) program at our college. This program is designed to equip students with the necessary knowledge and skills required to pursue a successful career in the field of production and industrial engineering.<br/>
                           Our experienced faculty members are committed to providing you with a challenging and stimulating academic experience that will enhance your professional and personal growth. We strive to create an environment that fosters learning and encourages innovation, creativity, and critical thinking.<br/>
                           We believe that our program offers students an opportunity to gain practical experience. These experiences will enable you to develop the necessary competencies and expertise to succeed in the dynamic and rapidly changing world of production and industrial engineering.<br/>
                           I encourage all students to take advantage of the opportunities available to them and make the most of their time at our college. With hard work, dedication, and perseverance, I am confident that each and every one of you will achieve great success in your career and personal life.
