--- a/academics_admissions/academic_calendar.html
+++ b/academics_admissions/academic_calendar.html
@@ -199,7 +199,10 @@
                 <div class="down-content">
                    
                      <h4 class="block-dept">Academic Calender</h4>
-
+                     <p> 
+                      <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
+                      <a href="../assets/files/Academic-Calendar_July23.PDF" target="_blank">Academic Calender For 2023-24 (Odd Semester)</a> 
+                  </p> <br/><br>
                     <p> 
                       <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
                       <a href="../assets/files/Academic-Cal_Jan23.PDF" target="_blank">Academic Calender For 2022-23 (Even Semester)-Updated</a> 
