home text conditional

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ TemplateMo 569 Edu Meeting
 https://templatemo.com/tm-569-edu-meeting
 
 -->
+<style>
+  @media only screen and (max-width: 767px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
+</style>
   </head>
 
 <body>
@@ -209,7 +216,7 @@ https://templatemo.com/tm-569-edu-meeting
                 
                 <p style="text-align: justify;">
                   Government Polytechnic College Bathinda was established in the year 1985 to impart quality education in the field of Engineering and Technology,with an aim to cater to the students of the southern Punjab.
-                   This College is situated on Bibiwala road approx 3kms from Bathinda bus stand and approx 4.2kms from Bathinda railway station junction.
+                   <span class="mobile-hidden">This College is situated on Bibiwala road approx 3kms from Bathinda bus stand and approx 4.2kms from Bathinda railway station junction.</span>
                   It has been established on a lush green campus of 22 acres.<br/>
                   
                 </p>
@@ -241,7 +248,7 @@ https://templatemo.com/tm-569-edu-meeting
                           Regarding End Semester Examination May 2023
                         </a>
                       </li> -->
-                      <li>
+                      <!-- <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/src_activity_even_sem_23.pdf" target="_blank">
                             SRC Activity News Letter Even Semester (2022-23)
                           </a>
@@ -250,7 +257,7 @@ https://templatemo.com/tm-569-edu-meeting
                           <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/src_activity_odd_sem_22.pdf" target="_blank">
                             SRC Activity News Letter Odd Semester (2022-23)
                             </a>
-                          </li>
+                          </li> -->
                      <!--<li>
                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_pharmacy_2022.pdf" target="_blank">
                           Direct Counseling (Diploma in Pharmacy)- Admissions 2022-23
